fix fdo#62050 : Initially disable RTL for comment window.

In RTL UI, comment window is RTL and editbox’s (editeng) default writing
direction is LTR.
and i suspect, the bug is result of this RTL & LTR mix-up.

Change-Id: If3af4ae428b67151d66661907b9e60a97049e0e6
Reviewed-on: https://gerrit.libreoffice.org/2831
Reviewed-by: abdulmajeed ahmed <aalabdulrazzaq@kacst.edu.sa>
Reviewed-by: Ahmad Harthi <aalharthi@kacst.edu.sa>
Tested-by: Ahmad Harthi <aalharthi@kacst.edu.sa>